--- a/src/main/resources/static/css/indexStylesheet.css
+++ b/src/main/resources/static/css/indexStylesheet.css
@@ -11,6 +11,10 @@
 @import "signinStylesheet.css";
 /*Welcome Page*/
 @import "welcomeStylesheet.css";
+/*Book Page*/
+@import "welcomeStylesheet.css";
+/*Book Page*/
+@import "bookPageStylesheet.css";
 
 
 /*======= Index Page =======*/
