Condition: Skip if ISBN is the same. This will skip having the same book.

--- a/src/main/resources/templates/main/SingleBookPreview.html
+++ b/src/main/resources/templates/main/SingleBookPreview.html
@@ -87,7 +87,7 @@
                         </div>
                         <!--- Books Container ---->
                         <div id="sameGenreContainer">
-                            <section class="book-container" th:each="book:${booksOfSameGenre}">
+                            <section class="book-container" th:each="book:${booksOfSameGenre}" th:if="${book.getIsbn() != singleBookInfo.getIsbn()}">
                                 <!-- anchor -->
                                 <a th:href="@{/single/{id}(id = ${book.getId()})}" th:title="${book.getTitle()}">
                                     <!-- Book Cover -->
