--- a/src/main/resources/static/css/indexStylesheet.css
+++ b/src/main/resources/static/css/indexStylesheet.css
@@ -12,9 +12,10 @@
 /*Welcome Page*/
 @import "welcomeStylesheet.css";
 /*Book Page*/
-@import "welcomeStylesheet.css";
-/*Book Page*/
 @import "bookPageStylesheet.css";
+/*User Profile Page*/
+@import "profileStylesheet.css";
+
 
 
 /*======= Index Page =======*/
