--- a/src/main/resources/static/css/bookPageStylesheet.css
+++ b/src/main/resources/static/css/bookPageStylesheet.css
@@ -139,8 +139,10 @@
                             background: #fff;
                             box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
                             border-radius: 25px;
-                            transition: transform 0.8s, box-shadow 1s;
-                            /*Hover*/
+                            min-width: 190px;
+                            width: 190px;
+                            height: auto;
+                            transition: transform 0.8s, box-shadow 1s;                            /*Hover*/
                             &:hover {
                                 transform: scale(0.98);
                                 box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
@@ -250,9 +252,9 @@
                                 text-decoration: none;
                                 /* Profile Picture */
                                 .review-user-profile-img{
-                                    height: 100px;
+                                    height: 160px;
                                     width: 100px;
-                                    border-radius: 40px;
+                                    border-radius: 12px;
                                     object-fit: cover;
                                     transition: all .35s ease-in-out;
                                     &:Hover{
@@ -279,7 +281,9 @@
                             > h5{
 
                             }
+                            /*Rating Condition Container*/
                             & span {
+                                /*Each Rating img*/
                                 .review-book-rating{
                                     height: 25px;
                                     width: auto;
