--- a/src/main/resources/static/css/welcomeStylesheet.css
+++ b/src/main/resources/static/css/welcomeStylesheet.css
@@ -88,6 +88,9 @@
                     background: #fff;
                     box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
                     border-radius: 25px;
+                    min-width: 190px;
+                    width: 190px;
+                    height: auto;
                     transition: transform 0.8s, box-shadow 1s;
                     /*Hover*/
                     &:hover {
@@ -99,8 +102,8 @@
                         color: #1e1e1e;
                         /*Book Cover*/
                         .book-cover{
-                            width: 190px;
                             height: 220px;
+                            width: 100%;
                             border-radius: 25px 25px 0 0;
                         }
                         & p {
@@ -226,6 +229,9 @@
                     background: #fff;
                     box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
                     border-radius: 25px;
+                    min-width: 190px;
+                    width: 190px;
+                    height: auto;
                     transition: transform 0.8s, box-shadow 1s;
                     /*Hover*/
                     &:hover {
@@ -237,10 +243,9 @@
                         color: #1e1e1e;
                         /*Book Cover*/
                         .book-cover{
-                            width: 190px;
                             height: 220px;
-                            border-radius: 25px 25px 0 0;
-                        }
+                            width: 100%;
+                            border-radius: 25px 25px 0 0;                        }
                         & p {
                             padding-left: 12px;
                             padding-bottom: 0;
