On profile and book changed the padding on the top to make sure its not hidden by navbar

--- a/src/main/resources/templates/main/SingleBookPreview.html
+++ b/src/main/resources/templates/main/SingleBookPreview.html
@@ -41,7 +41,7 @@
                 </button>
             </form>
             <!--- Write a Review Button --->
-            <a href="" class="write-review-button" id="write-review-button">
+            <a href="#title-review" class="write-review-button" id="write-review-button">
                 <span>Write Review</span>
             </a>
             <!--- Purchase Button --->
